[package]
name = "txn-service"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.42", features= ["serde"]}
diesel = { version = "2.2.11", features = ["postgres", "numeric", "serde_json", "uuid", "chrono"] }
diesel-async = { version="0.6.1",features = ["postgres", "pool", "bb8"] }
dotenvy = "0.15.7"
poem = "3.1.12"
poem-openapi = "5.1.16"
rust_decimal = {version="1.38.0", features=["db-diesel2-postgres", "diesel"]}
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid   = { version = "1", features = ["serde", "v4"] }
