[package]
name = "txn-service"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.42", features= ["serde"]}
dotenvy = "0.15.7"
poem = "3.1.12"
poem-openapi = "5.1.16"
rust_decimal = {version="1.38.0", features=["serde"]}
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid   = { version = "1", features = ["serde", "v4"] }
